--- a/Dockerfile_impala
+++ b/Dockerfile_impala
@@ -1,15 +1,16 @@
 FROM ubuntu_impala3.4.1
 
-RUN mkdir -p /root/work
-RUN mkdir -p /opt/impala/conf
-WORKDIR /root/work
+ARG IMPALA_HOME
+RUN ln -s /home/impdev/Impala $IMPALA_HOME
 
-COPY ./hdfs-site.xml /opt/impala/conf
-COPY ./core-site.xml /opt/impala/conf
-COPY ./mapred-site.xml /opt/impala/conf
-COPY ./yarn-site.xml /opt/impala/conf
-COPY ./hive-site.xml /opt/impala/conf
-COPY ./tez-site.xml /opt/impala/conf
+RUN mkdir $IMPALA_HOME/conf
+COPY ./set-classpath.sh $IMPALA_HOME/bin
+COPY ./hdfs-site.xml $IMPALA_HOME/conf
+COPY ./core-site.xml $IMPALA_HOME/conf
+COPY ./mapred-site.xml $IMPALA_HOME/conf
+COPY ./yarn-site.xml $IMPALA_HOME/conf
+COPY ./hive-site.xml $IMPALA_HOME/conf
+COPY ./tez-site.xml $IMPALA_HOME/conf
 
 CMD /bin/bash
 
