--- a/.env
+++ b/.env
@@ -1,25 +1,23 @@
-JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"
 HDFS_NAMENODE_USER="root"
 HDFS_DATANODE_USER="root"
 HDFS_SECONDARYNAMENODE_USER="root"
 YARN_RESOURCEMANAGER_USER="root"
 YARN_NODEMANAGER_USER="root"
+
+JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"
 HADOOP_HOME="/opt/hadoop"
 HIVE_HOME="/opt/hive"
 TEZ_HOME="/opt/tez"
+HBASE_HOME="/opt/hbase"
+IMPALA_HOME="/opt/impala"
+HADOOP_COMMON_HOME="${HADOOP_HOME}"
+HADOOP_CONF_DIR="${HADOOP_HOME}/etc/hadoop"
+HADOOP_HDFS_HOME="${HADOOP_HOME}"
+HADOOP_MAPRED_HOME="${HADOOP_HOME}"
+THRIFT_HOME="${IMPALA_HOME}/toolchain/thrift-0.9.3-p7"
 TEZ_CONF_DIR="${TEZ_HOME}/conf"
 TEZ_JARS="${TEZ_HOME}/*:${TEZ_HOME}/lib/*"
 HADOOP_CLASSPATH="${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*:${HADOOP_CLASSPATH}"
-CLASSPATH="$CLASSPATH:${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*"
-IP="localhost"
-CLUSTER_NAME="localhost"
-HADOOP_COMMON_HOME="${HADOOP_HOME}"
-HADOOP_CONF_DIR="${HADOOP_HOME}/etc/hadoop"
-HADOOP_CONF_DIR_dfs_namenode_name_dir="file:///var/lib/hadoop-hdfs/cache/hdfs/dfs/name"
-HADOOP_HDFS_HOME="${HADOOP_HOME}"
-HADOOP_MAPRED_HOME="${HADOOP_HOME}"
-HADOOP_VERSION="3.2.4"
-IMPALA_HOME="/opt/impala"
-THRIFT_HOME="${IMPALA_HOME}/toolchain/thrift-0.9.3-p7"
+
 PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:${HADOOP_HOME}/sbin:${HADOOP_HOME}/bin:${HIVE_HOME}/bin:/opt/impala/bin:${IMPALA_HOME}/shell"
 LD_LIBRARY_PATH="/opt/impala/lib:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/:/opt/impala/lib/plugins"
