--- a/.env
+++ b/.env
@@ -19,5 +19,5 @@ TEZ_CONF_DIR="${TEZ_HOME}/conf"
 TEZ_JARS="${TEZ_HOME}/*:${TEZ_HOME}/lib/*"
 HADOOP_CLASSPATH="${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*:${HADOOP_CLASSPATH}"
 
-PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:${HADOOP_HOME}/sbin:${HADOOP_HOME}/bin:${HIVE_HOME}/bin:/opt/impala/bin:${IMPALA_HOME}/shell"
+PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:${HADOOP_HOME}/sbin:${HADOOP_HOME}/bin:${HIVE_HOME}/bin:/opt/impala/bin:${IMPALA_HOME}/shell:${HBASE_HOME}/bin"
 LD_LIBRARY_PATH="/opt/impala/lib:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/:/opt/impala/lib/plugins"
