--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
         - HIVE_HOME=$HIVE_HOME
         - TEZ_HOME=$TEZ_HOME
         - HBASE_HOME=$HBASE_HOME
+        - USER_HOME=$USER_HOME
     tty: true
     env_file: .env
     command: >
