--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-HDFS_NAMENODE_USER="root"
-HDFS_DATANODE_USER="root"
-HDFS_SECONDARYNAMENODE_USER="root"
-YARN_RESOURCEMANAGER_USER="root"
-YARN_NODEMANAGER_USER="root"
+USER_NAME="root"
+USER_HOME="/root/work"
+HDFS_NAMENODE_USER="${USER_NAME}"
+HDFS_DATANODE_USER="${USER_NAME}"
+HDFS_SECONDARYNAMENODE_USER="${USER_NAME}"
+YARN_RESOURCEMANAGER_USER="${USER_NAME}"
+YARN_NODEMANAGER_USER="${USER_NAME}"
 
 JAVA_HOME="/usr/lib/jvm/java-8-openjdk-amd64"
 HADOOP_HOME="/opt/hadoop"
@@ -15,5 +17,5 @@ TEZ_CONF_DIR="${TEZ_HOME}/conf"
 TEZ_JARS="${TEZ_HOME}/*:${TEZ_HOME}/lib/*"
 HADOOP_CLASSPATH="${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*:${HADOOP_CLASSPATH}"
 
-PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:${HADOOP_HOME}/sbin:${HADOOP_HOME}/bin:${HIVE_HOME}/bin:/opt/impala/bin:${IMPALA_HOME}/shell:${HBASE_HOME}/bin"
-LD_LIBRARY_PATH="/opt/impala/lib:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/:/opt/impala/lib/plugins"
+PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:${HADOOP_HOME}/sbin:${HADOOP_HOME}/bin:${HIVE_HOME}/bin:${IMPALA_HOME}/bin:${IMPALA_HOME}/shell:${HBASE_HOME}/bin"
+LD_LIBRARY_PATH="${IMPALA_HOME}/lib:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/:${IMPALA_HOME}/lib/plugins"
