--- a/.env
+++ b/.env
@@ -14,6 +14,7 @@ HBASE_HOME="/opt/hbase"
 IMPALA_HOME="/opt/impala"
 THRIFT_HOME="${IMPALA_HOME}/toolchain/thrift-0.9.3-p7"
 NIFI_HOME="/opt/nifi"
+SPARK_HOME="/opt/spark"
 TEZ_CONF_DIR="${TEZ_HOME}/conf"
 TEZ_JARS="${TEZ_HOME}/*:${TEZ_HOME}/lib/*"
 HADOOP_CLASSPATH="${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*:${HADOOP_CLASSPATH}"
