--- a/main-container/Dockerfile
+++ b/main-container/Dockerfile
@@ -14,18 +14,13 @@ ARG USER_HOME
 RUN mkdir -p $USER_HOME
 WORKDIR $USER_HOME
 
-# RUN wget -O - https://archive.apache.org/dist/hadoop/core/hadoop-3.1.4/hadoop-3.1.4.tar.gz | tar zxf -
-# RUN wget -O - https://dlcdn.apache.org/hive/hive-3.1.3/apache-hive-3.1.3-bin.tar.gz | tar zxf -
-# RUN wget -O - https://dlcdn.apache.org/tez/0.9.2/apache-tez-0.9.2-bin.tar.gz | tar zxf -
-# RUN wget -O - https://archive.apache.org/dist/hbase/2.2.7/hbase-2.2.7-bin.tar.gz | tar zxf -
-COPY ./hadoop-3.1.4.tar.gz $USER_HOME
-COPY ./apache-hive-3.1.3-bin.tar.gz $USER_HOME
-COPY ./apache-tez-0.9.2-bin.tar.gz $USER_HOME
-COPY ./hbase-2.2.7-bin.tar.gz $USER_HOME
-RUN tar zxf hadoop-3.1.4.tar.gz
-RUN tar zxf apache-hive-3.1.3-bin.tar.gz
-RUN tar zxf apache-tez-0.9.2-bin.tar.gz
-RUN tar zxf hbase-2.2.7-bin.tar.gz
+# RUN wget -O - https://archive.apache.org/dist/hadoop/core/hadoop-3.1.4/hadoop-3.1.4.tar.gz | tar zxf - && \
+#     wget -O - https://dlcdn.apache.org/hive/hive-3.1.3/apache-hive-3.1.3-bin.tar.gz | tar zxf - && \
+#     wget -O - https://dlcdn.apache.org/tez/0.9.2/apache-tez-0.9.2-bin.tar.gz | tar zxf - && \
+#     wget -O - https://archive.apache.org/dist/hbase/2.2.7/hbase-2.2.7-bin.tar.gz | tar zxf - && \
+#     wget -O - https://archive.apache.org/dist/spark/spark-2.4.8/spark-2.4.8-bin-without-hadoop.tgz | tar zxf -
+COPY ./hadoop-3.1.4.tar.gz ./apache-hive-3.1.3-bin.tar.gz ./apache-tez-0.9.2-bin.tar.gz ./hbase-2.2.7-bin.tar.gz ./spark-2.4.8-bin-without-hadoop.tgz $USER_HOME
+RUN find . \( -name "*.tar.gz" -or -name "*.tgz" \) -exec tar zxf {} \;
 
 # ssh
 RUN ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa && \
@@ -38,12 +33,14 @@ ARG HADOOP_HOME
 ARG HIVE_HOME
 ARG TEZ_HOME
 ARG HBASE_HOME
+ARG SPARK_HOME
 
 # symbolic link
 RUN ln -s $USER_HOME/hadoop-3.1.4 $HADOOP_HOME && \
   ln -s $USER_HOME/apache-hive-3.1.3-bin $HIVE_HOME && \
   ln -s $USER_HOME/apache-tez-0.9.2-bin $TEZ_HOME && \
-  ln -s $USER_HOME/hbase-2.2.7 $HBASE_HOME
+  ln -s $USER_HOME/hbase-2.2.7 $HBASE_HOME && \
+  ln -s $USER_HOME/spark-2.4.8-bin-without-hadoop $SPARK_HOME
 
 # fix guava version conflict
 RUN rm $HIVE_HOME/lib/guava-* && \
