--- a/.env
+++ b/.env
@@ -15,9 +15,11 @@ IMPALA_HOME="/opt/impala"
 THRIFT_HOME="${IMPALA_HOME}/toolchain/thrift-0.9.3-p7"
 NIFI_HOME="/opt/nifi"
 SPARK_HOME="/opt/spark"
+LIVY_HOME="/opt/livy"
 TEZ_CONF_DIR="${TEZ_HOME}/conf"
 TEZ_JARS="${TEZ_HOME}/*:${TEZ_HOME}/lib/*"
 HADOOP_CLASSPATH="${TEZ_CONF_DIR}:${TEZ_JARS}/*:${TEZ_JARS}/lib/*:${HADOOP_CLASSPATH}"
+#HADOOP_CONF_DIR="${HADOOP_HOME}/etc/hadoop"
 
 PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:${HADOOP_HOME}/sbin:${HADOOP_HOME}/bin:${HIVE_HOME}/bin:${IMPALA_HOME}/bin:${IMPALA_HOME}/shell:${HBASE_HOME}/bin"
 LD_LIBRARY_PATH="${IMPALA_HOME}/lib:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/:/usr/lib/jvm/java-8-openjdk-amd64/jre/lib/amd64/server/:${IMPALA_HOME}/lib/plugins"
