--- a/main-container/Dockerfile
+++ b/main-container/Dockerfile
@@ -1,20 +1,19 @@
 FROM ubuntu:16.04
 
-# download
+# apt-get
 RUN apt-get update && apt-get install -y \
   openjdk-8-jdk \
   ssh \
-  sudo \
   unzip \
   vim \
   wget \
-  && apt-get clean \
-  && rm -rf /var/lib/apt/lists/*
+  && apt-get clean
 
 ARG USER_HOME
 RUN mkdir -p $USER_HOME
 WORKDIR $USER_HOME
 
+# download
 # RUN wget -O - https://archive.apache.org/dist/hadoop/core/hadoop-3.1.4/hadoop-3.1.4.tar.gz | tar zxf - && \
 #     wget -O - https://dlcdn.apache.org/hive/hive-3.1.3/apache-hive-3.1.3-bin.tar.gz | tar zxf - && \
 #     wget -O - https://dlcdn.apache.org/tez/0.9.2/apache-tez-0.9.2-bin.tar.gz | tar zxf - && \
@@ -32,13 +31,13 @@ RUN find -maxdepth 1 \( -name "*.tar.gz" -or -name "*.tgz" \) -exec tar zxf {} \
   find -maxdepth 1 -name "*.zip" -exec unzip {} \; && \
   rm -f *.tar.gz *.tgz *.zip
 
-
 # ssh
 RUN ssh-keygen -t rsa -P '' -f ~/.ssh/id_rsa && \
   cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys && \
   chmod 0600 ~/.ssh/authorized_keys && \
   ssh-keyscan -t rsa localhost >> ~/.ssh/known_hosts
 
+# args
 ARG JAVA_HOME
 ARG HADOOP_HOME
 ARG HIVE_HOME
@@ -60,15 +59,10 @@ RUN rm $HIVE_HOME/lib/guava-* && \
   cp $HADOOP_HOME/share/hadoop/hdfs/lib/guava-27.0-jre.jar $HIVE_HOME/lib/
 
 # config file
-COPY ./hdfs-site.xml $HADOOP_HOME/etc/hadoop/hdfs-site.xml
-COPY ./core-site.xml $HADOOP_HOME/etc/hadoop/core-site.xml
-COPY ./mapred-site.xml $HADOOP_HOME/etc/hadoop/mapred-site.xml
-COPY ./yarn-site.xml $HADOOP_HOME/etc/hadoop/yarn-site.xml
-COPY ./hadoop-env.sh $HADOOP_HOME/etc/hadoop/hadoop-env.sh
-COPY ./hive-site.xml $HIVE_HOME/conf/hive-site.xml
-COPY ./tez-site.xml $TEZ_HOME/conf/tez-site.xml
-COPY ./hbase-env.sh $HBASE_HOME/conf
-COPY ./hbase-site.xml $HBASE_HOME/conf
-COPY ./spark-env.sh $SPARK_HOME/conf
+COPY hdfs-site.xml core-site.xml mapred-site.xml yarn-site.xml hadoop-env.sh $HADOOP_HOME/etc/hadoop/
+COPY hive-site.xml $HIVE_HOME/conf/
+COPY tez-site.xml $TEZ_HOME/conf/
+COPY hbase-env.sh hbase-site.xml $HBASE_HOME/conf/
+COPY spark-env.sh $SPARK_HOME/conf/
 
 CMD /bin/bash
